go/k8s/monitor/lxcfs/deploy/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: lxcfs-webhook
  labels:
    app: lxcfs-webhook
webhooks:
  - name: mutating.lxcfs-webhook.kube-system.net
    clientConfig:
#     url: "https://7520b0b63951.ngrok.io" # for debug in local
      service:
        name: lxcfs-webhook
        namespace: kube-system
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvRENDQW9pZ0F3SUJBZ0lVZXNSQndRU1F4TTRlM3R2LzB4bnFBU25FODBVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2FERUxNQWtHQTFVRUJoTUNRMDR4RURBT0JnTlZCQWdUQjBKbGFVcHBibWN4RURBT0JnTlZCQWNUQjBKbAphVXBwYm1jeEV6QVJCZ05WQkFvVENrdDFZbVZ5Ym1WMFpYTXhDekFKQmdOVkJBc1RBa05CTVJNd0VRWURWUVFECkV3cExkV0psY201bGRHVnpNQjRYRFRJeE1ESXlNekF5TkRNd01Gb1hEVEkyTURJeU1qQXlORE13TUZvd2FERUwKTUFrR0ExVUVCaE1DUTA0eEVEQU9CZ05WQkFnVEIwSmxhVXBwYm1jeEVEQU9CZ05WQkFjVEIwSmxhVXBwYm1jeApFekFSQmdOVkJB [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: '*'
    namespaceSelector:
      matchExpressions:
      - key: lxcfs-webhook
        operator: In
        values:
        - enabled
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 30
    reinvocationPolicy: Never
